--- a/css/index.css
+++ b/css/index.css
@@ -293,12 +293,13 @@
 	text-align: center;
 	width: 100%;
 	height: 60px;
-	/*border: 1px solid red;*/
 	font-size: 60px;
 	color: white;
 	font-weight: bold;
 }
 
 
-
-
+#socialShare{
+	position: relative;
+	z-index: 10000;
+}
